server/compilers/goLiteJS/src/test/ml1/invalid/decl17.go
// no var keyword, type or expression in tuple declaration
package main

x, y
